--- a/SMN SOCIAL SITE/msn.html
+++ b/SMN SOCIAL SITE/msn.html
@@ -27,7 +27,7 @@
                 <img src="profile-pic.png">
             </div>
         </div>
-        <!------------settings Menu---------------->
+        <!------------settings Menu----------------->
         <div class="settings-menu">
 
             <div id="dark-btn">
